Added main Freckles picture to webpage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     </head>
     
     <body>
-        
+        <div style="margin-top: 100px; text-align: center">
+            <img id="mantisImg" src="images/mantis.png" alt="Freckles" />
+        </div>
     </body>
 </html>
