--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Play with Freckles!</title>
     </head>
     
-    <body>
+    <body onload="alert('Introducing the HRUNTING/YGGDRASIL Mark IX Armor Defense System');">
         <div style="margin-top: 100px; text-align: center">
             <img id="mantisImg" src="images/mantis.png" alt="Freckles" />
         </div>
