--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
     </head>
     
     <body onload="alert('Introducing the HRUNTING/YGGDRASIL Mark IX Armor Defense System');">
+        Play with Freckles!
+        A little JavaScript experiment
         <div style="margin-top: 100px; text-align: center">
             <img id="frecklesImg" src="images/mantis.png" alt="Freckles" style="cursor: pointer" onclick="pokeFreckles();"
             />
         </div>
+        By Munchicken
+        "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth
+        "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia
     </body>
 </html>
