--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
         By Munchicken
         "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth
         "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia
+        Red Vs. Blue copyright RoosterTeeth
+        Halo copyright Microsoft
     </body>
 </html>
