--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                        ];
             function pokeFreckles() {
                 if (confirm("Would you like for Caboose to tell you more about me?")) {
-                    alert(phrases[Math.floor((Math.random()*5)+0)]);
-                    document.getElementById("frecklesImg").src = pics[Math.floor((Math.random()*2)+0)];
+                    alert(phrases[Math.floor((Math.random()*6))]);
+                    document.getElementById("frecklesImg").src = pics[Math.floor((Math.random()*3))];
                 }
                 
             }
@@ -25,16 +25,16 @@
     </head>
     
     <body onload="alert('Introducing the HRUNTING/YGGDRASIL Mark IX Armor Defense System');">
-        Play with Freckles!
-        A little JavaScript experiment
+        <h1>Play with Freckles!</h1>
+        <h2>A little JavaScript experiment</h2>
         <div style="margin-top: 100px; text-align: center">
             <img id="frecklesImg" src="images/mantis.png" alt="Freckles" style="cursor: pointer" onclick="pokeFreckles();"
             />
         </div>
-        By Munchicken
-        "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth
-        "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia
-        Red Vs. Blue copyright RoosterTeeth
-        Halo copyright Microsoft
+        <p>By Munchicken</p>
+        <p>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth</p>
+        <p>"HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia</p>
+        <p>Red Vs. Blue copyright RoosterTeeth</p>
+        <p>Halo copyright Microsoft</p>
     </body>
 </html>
