Added some color, margins, padding, border, and font

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
     <head>
         <title>Play with Freckles!</title>
         
+        <style type="text/css">
+            body {
+                background-color: #789bcc;
+                margin-left: 20%;
+                margin-right: 20%;
+                border: 2px dotted black;
+                padding: 10px 10px 10px 10px;
+                font-family: sans-serif;
+            }
+        </style>
+        
         <script type="text/javascript">
             var phrases = ["His name is Freckles",
                            "Runs on the power of the friendship of our love",
