--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <img id="frecklesImg" src="images/mantis.png" alt="Freckles" style="cursor: pointer" onclick="pokeFreckles();"
             />
         </div>
-        <p>By Munchicken</p>
-        <p>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth</p>
-        <p>"HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia</p>
-        <p>Red Vs. Blue copyright RoosterTeeth</p>
-        <p>Halo copyright Microsoft</p>
+        <p>By <a href="www.munchicken.com">Munchicken</a></p>
+        <p><em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth</em></p>
+        <p><em>"HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia</em></p>
+        <p><em>Red Vs. Blue copyright RoosterTeeth</em></p>
+        <p><em>Halo copyright Microsoft</em></p>
     </body>
 </html>
