--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             />
         </div>
         <p>By <a href="www.munchicken.com">Munchicken</a></p>
-        <p><em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth</em></p>
-        <p><em>"HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia</em></p>
-        <p><em>Red Vs. Blue copyright RoosterTeeth</em></p>
-        <p><em>Halo copyright Microsoft</em></p>
+        <p><em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
+        "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
+        Red Vs. Blue copyright RoosterTeeth<br>
+        Halo copyright Microsoft</em></p>
     </body>
 </html>
