--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img id="frecklesImg" src="images/mantis.png" alt="Freckles" style="cursor: pointer" onclick="pokeFreckles();"
             />
         </div>
-        <p>By <a href="www.munchicken.com">Munchicken</a></p>
+        <p>By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a></p>
         <p><em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
         "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
         Red Vs. Blue copyright RoosterTeeth<br>
