Fixed W3C validation errors & warnings by adding encoding and removing types from script & style

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Play with Freckles!</title>
         
-        <style type="text/css">
+        <style>
             body {
                 background-color: #789bcc;
                 margin-left: 20%;
@@ -13,7 +15,7 @@
             }
         </style>
         
-        <script type="text/javascript">
+        <script>
             var phrases = ["His name is Freckles",
                            "Runs on the power of the friendship of our love",
                            "fluffy ears to scratch",
