--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
     
     <body onload="alert('Introducing the HRUNTING/YGGDRASIL Mark IX Armor Defense System');">
         <h1>Play with Freckles!</h1>
-        <h3>A little JavaScript experiment</h2>
-        <div style="margin-top: 100px; text-align: center">
-            <img id="frecklesImg" src="images/mantis.png" alt="Freckles" style="cursor: pointer" onclick="pokeFreckles();"
+        <h3>A little JavaScript experiment</h3>
+        <div class="plaything">
+            <img class="plaything" id="frecklesImg" src="images/mantis.png" alt="Freckles" onclick="pokeFreckles();"
             />
         </div>
-        <p>By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a></p>
-        <p><em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
-        "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
-        Red Vs. Blue copyright RoosterTeeth<br>
-        Halo copyright Microsoft</em></p>
+        <p class="byline">
+            By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a>
+        </p>
+        <p class="notice">
+            <em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
+            "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
+            Red Vs. Blue copyright RoosterTeeth<br>
+            Halo copyright Microsoft</em>
+        </p>
     </body>
 </html>
