Changed h3 font weight.  Changed from italic to oblique for notice and small.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a>
         </p>
         <p class="notice">
-            <em>"His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
+            "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
             "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
             Red Vs. Blue copyright RoosterTeeth<br>
-            Halo copyright Microsoft</em>
+            Halo copyright Microsoft
         </p>
     </body>
 </html>
