--- a/index.html
+++ b/index.html
@@ -27,20 +27,24 @@
     </head>
     
     <body onload="alert('Introducing the HRUNTING/YGGDRASIL Mark IX Armor Defense System');">
-        <h1>Play with Freckles!</h1>
-        <h3>A little JavaScript experiment</h3>
-        <div class="plaything">
-            <img class="plaything" id="frecklesImg" src="images/mantis.png" alt="Freckles" onclick="pokeFreckles();"
+        <div id="header">
+            <h1>Play with Freckles!</h1>
+            <h3>A little JavaScript experiment</h3>
+        </div>
+        <div id="main">
+            <img id="frecklesImg" src="images/mantis.png" alt="Freckles" onclick="pokeFreckles();"
             />
         </div>
-        <p class="byline">
-            By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a>
-        </p>
-        <p class="notice">
-            "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
-            "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
-            Red Vs. Blue copyright RoosterTeeth<br>
-            Halo copyright Microsoft
-        </p>
+        <div id="footer">
+            <p>
+                By <a href="www.munchicken.com" title="Munchicken's webpage">Munchicken</a>
+            </p>
+            <p>
+                "His Name is Freckles" drawings & sayings by Jon @ RooseterTeeth<br>
+                "HRUNTING/YGGDRASIL Mark IX Armor Defense System" image - from Halopedia<br>
+                Red Vs. Blue &copy; RoosterTeeth<br>
+                Halo &copy; Microsoft
+            </p>
+        </div>
     </body>
 </html>
