--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                         "images/FnC.jpg"
                        ];
             function pokeFreckles() {
-                if (confirm("Would you like for Caboose to tell you more about me?")) {
+                var userName = prompt("What's your name?","Enter name here");
+                if (confirm(userName + " would you like for Caboose to tell you more about me?")) {
                     alert(phrases[Math.floor((Math.random()*6))]);
                     document.getElementById("frecklesImg").src = pics[Math.floor((Math.random()*3))];
                     setTimeout("alert('You should play with Freckles');",1*60*1000);
